[gd_scene load_steps=19 format=2]

[ext_resource path="res://ui/hud/v2/PadDrawer.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/hud/v2/hud_v2_foreground.png" type="Texture" id=2]
[ext_resource path="res://ui/hud/v2/hud_v2_background.png" type="Texture" id=3]
[ext_resource path="res://ui/Cursor.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/hud/v2/FadePlayer.gd" type="Script" id=5]
[ext_resource path="res://ui/hud/v2/HUD.gd" type="Script" id=6]
[ext_resource path="res://ui/hud/v2/InventoryDrawer.tscn" type="PackedScene" id=7]
[ext_resource path="res://ui/hud/v2/MenuDrawer.tscn" type="PackedScene" id=8]
[ext_resource path="res://ui/hud/v2/Drawers.gd" type="Script" id=9]
[ext_resource path="res://ui/PIXELADE.TTF" type="DynamicFontData" id=10]
[ext_resource path="res://ui/hud/v2/FPSrate.gd" type="Script" id=11]

[sub_resource type="Animation" id=1]
resource_name = "blackscreen"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "fade_out"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "long_fade_in"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "medium_fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "medium_fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="DynamicFont" id=7]
size = 12
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[node name="HUD" type="Node2D"]
pause_mode = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fade" type="ColorRect" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_right = 480.0
margin_bottom = 270.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="FadePlayer" type="AnimationPlayer" parent="Fade"]
autoplay = "fade_in"
anims/blackscreen = SubResource( 1 )
anims/fade_in = SubResource( 2 )
anims/fade_out = SubResource( 3 )
anims/long_fade_in = SubResource( 4 )
anims/medium_fade_in = SubResource( 5 )
anims/medium_fade_out = SubResource( 6 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Drawers" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="PadDrawer" parent="Drawers" instance=ExtResource( 1 )]

[node name="InventoryDrawer" parent="Drawers" instance=ExtResource( 7 )]

[node name="MenuDrawer" parent="Drawers" instance=ExtResource( 8 )]
rotation = -5.07036e-06

[node name="Foreground" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="FPSrate" type="Label" parent="."]
margin_left = 3.89032
margin_top = 253.837
margin_right = 35.8903
margin_bottom = 266.837
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "100"
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cursor" parent="." instance=ExtResource( 4 )]

[node name="Tween" type="Tween" parent="."]
[connection signal="closed" from="Drawers/PadDrawer/PadHandle" to="Drawers" method="_on_PadHandle_closed"]
[connection signal="opened" from="Drawers/PadDrawer/PadHandle" to="Drawers" method="_on_PadHandle_opened"]
[connection signal="closed" from="Drawers/InventoryDrawer/InventoryHandle" to="Drawers" method="_on_InventoryHandle_closed"]
[connection signal="opened" from="Drawers/InventoryDrawer/InventoryHandle" to="Drawers" method="_on_InventoryHandle_opened"]
[connection signal="closed" from="Drawers/MenuDrawer/MenuHandle" to="Drawers" method="_on_MenuHandle_closed"]
[connection signal="opened" from="Drawers/MenuDrawer/MenuHandle" to="Drawers" method="_on_MenuHandle_opened"]

[editable path="Drawers/PadDrawer"]

[editable path="Drawers/InventoryDrawer"]

[editable path="Drawers/MenuDrawer"]
